--- a/src/content/project/asian influence guest bath pleasanton.mdx
+++ b/src/content/project/asian influence guest bath pleasanton.mdx
@@ -1,8 +1,292 @@
 ---
 title: "Asian Influence Guest Bath-Pleasanton"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2021"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/49b1879301860005_8-8458/transitional-bathroom.jpg",
+    alt: "Image of Remodeled Asian Influence Bathroom",
+  }
 ---
 
-## Asian Influence Guest Bath-Pleasanton
+## ASIAN INFLUENCE GUEST BATH - PLEASANTON, CA
+
+Our lovely client adores Japan and travels there regularly. With her discerning eye for elegance & objet d'art, she has amassed beautiful collections of everyday items used long ago in Japan. Our Client's goal was to remodel the dated guest bathroom - but not better than the master bath remodel we did 16 years ago! To that end I suggested we remove the wall between the shower & vanity and the ceiling light box, widen the vanity, and create a natural organic space that feels like a natural river. Together we knew the space would host any Japanese art piece place within the room. All the materials and finishes were inspired by the existing floor (see the stair photo) which we installed years ago. The distressed maple flooring was chosen to reflect the smoothly-worn floors found in the Zen Garden's Ryoanji Temple in Kyoto, Japan.
+
+Project Year: 2021
+
+Project Cost: $25,001 - $50,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/49b1879301860005_8-8458/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/bf11bf5401860038_8-8459/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/02a19dc30185ffdf_8-8458/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/196161150185fff2_8-8458/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/b1b1b94e01860021_8-8459/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/e361d98b01860029_8-8458/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="354"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/2101549c0185fffa_8-8458/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/21f1a2cc0186000d_8-8458/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/57c1b3c301860018_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/26d1b4d701860040_8-8458/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/0291cbe301860046_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="372"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/4771da2001860060_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/f22158180186004e_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/da112e6701860065_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/07c1a1a40186006a_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/16619d3601860058_8-8459/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/64b134d801860076_8-8459/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/8d21e0e00186007d_8-8459/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/2a6116640186009c_8-8459/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="580"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/5df111d10186009e_8-8459/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="580"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/61718dc401860087_8-0173/contemporary-powder-room.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Inspiration</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/c36176e501860099_8-0173/contemporary-staircase.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="398"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
