--- a/src/content/project/beautiful bungalow renovation kitchen and bath.mdx
+++ b/src/content/project/beautiful bungalow renovation kitchen and bath.mdx
@@ -1,8 +1,264 @@
 ---
 title: "Beautiful Bungalow Renovation - Kitchen & Bath"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2023"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/56c147af0467d609_8-6605/transitional-kitchen.jpg",
+    alt: "Kitchen image",
+  }
 ---
 
-## Beautiful Bungalow Renovation - Kitchen & Bath
+## Beautiful Bungalow Renovation - Sacramento, CA
+
+This enchanting West Sacramento Bungalow sits within a beautifully landscaped environment which was started 4 years before the Owner's focused their talented eye on renovating the interior kitchen & bath. The single bath was decked out in natural finishes reflecting their stunning backyard & fountain stream. Add to that Lux Spa features like the heated floor, custom floating vanity, wall-hung toilet, tall custom shower enclosure & raised shower fixtures, and you're on a fab staycation! This forever bath needed age-in-place functionality without a hint of institutional vibes. Stylish grab bars, including the TP holder accommodate any future mobility concerns. The kitchen's transformation was all about more counter & cabinet space. Finishes were combined to compliment the park-like view & soon a natural live edge slab will be fashioned into shelves & counter under the 2nd window. The new sink located under the raised windows doubled the counter space & organized the appliances. Another bonus for our tall clients was to raise the counters & appliances 3 inches - while standing on a more forgiving new hardwood floor.
+
+Project Year: 2023
+
+Project Cost: $100,001 - $150,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/1351098c0467d5d5_8-6553/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/15e1e9c30467d5e9_8-9664/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="560"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/56c147af0467d609_8-6605/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/7451d8d70467d5f8_8-6588/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/c311c5860467d600_8-6596/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/3c81d1360467ec19_8-2255/traditional.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="426"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/3c11fac90467ec24_8-2266/traditional.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/4781f6200467ec4e_8-2306/traditional.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <img
+    src="https://st.hzcdn.com/simgs/8ae15bb20467f2d8_8-3980/modern-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/0cc1b2670467f2e9_8-3996/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/5cf1d8760467f2fe_8-4018/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="588"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/7ef1054a0467f30e_8-4033/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/f3b19d560467f321_8-4053/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/2151ef140467f330_8-4068/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/07915bbf0467f336_8-4074/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="416"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/282123bc04680b5d_8-0345/home-design.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/a96176b404680b70_8-0347/home-design.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/8a01fd8804680b7e_8-0348/home-design.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/0391b0f504680b88_8-0351/home-design.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
