--- a/src/content/project/betty d kitchen reno.mdx
+++ b/src/content/project/betty d kitchen reno.mdx
@@ -1,8 +1,114 @@
 ---
-title: "Betty D Kitchen Reno"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
+title: "Betty D. Kitchen Reno"
 publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/pictures/kitchens/the-deep-kohler-cast-iron-sink-is-the-kitchen-workhorse-west-designs-full-service-k-b-designer-builder-img~6331bd100eab5d11_8-5346-1-059e687.jpg",
+    alt: "Image of Kitchen with cabinet lighting",
+  }
 ---
 
-## Betty D Kitchen Reno
+## Betty D. Kitchen Reno
+
+Beautiful kitchen update in monochromatic color palette. We expanded the kitchen U shape 15" by adding two corner lazy Susan's left & right of the new range. Herringbone tile adds a layer of texture to complement the raised panel doors & honed counters echo the look of the smudge-proof appliances. The old cabinets over the peninsula were removed to see the beautiful view of the outside orchard!
+
+Project Year: 2020
+
+Project Cost: $50,001 - $75,000
+
+Country: United States
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/coral-clay-qtz-w-honed-finish-mute-reflections-from-can-lights-west-designs-full-service-k-b-designer-builder-img~35c15c050eab5cf3_8-5346-1-b433d32.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/large-format-tile-creates-a-bold-splash-in-classic-polished-limestone-west-designs-full-service-k-b-designer-builder-img~db91964f0eab5d01_8-5346-1-db07bf8.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/the-deep-kohler-cast-iron-sink-is-the-kitchen-workhorse-west-designs-full-service-k-b-designer-builder-img~6331bd100eab5d11_8-5346-1-059e687.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/ample-storage-accommodated-by-adding-12-deep-cabinets-behind-the-peninsula-west-designs-full-service-k-b-designer-builder-img~df51e9d90eab5d21_8-5346-1-6415408.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/kitchens/during-cabs-and-counters-in-splash-and-appliances-next-west-designs-full-service-k-b-designer-builder-img~c76136040eab67b6_8-5347-1-c191670.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Demo Complete</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/kitchens/demo-complete-west-designs-full-service-k-b-designer-builder-img~50f1a9810eab67a7_8-5347-1-82691af.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/kitchens/before-original-oak-cabinets-and-tile-counters-with-wide-grout-lines-west-designs-full-service-k-b-designer-builder-img~39817b190eab679b_8-5348-1-f05c544.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
