--- a/src/content/project/de la mora bath.mdx
+++ b/src/content/project/de la mora bath.mdx
@@ -1,8 +1,178 @@
 ---
 title: "De La Mora Bath"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: ""
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/22512fb200601854_8-5662/bathroom.jpg",
+    alt: "bathroom counter image with light",
+  }
 ---
 
-## De La Mora Bath
+## DE LA MORA BATH
+
+Simple and modern was the directive for this pretty little bath, with emphasis on the custom vanity inset doors & drawers. A beautiful marble mosaic tile creates a stone "carpet" inset in front of the sleek vanity and polished quartz counter. All tile surfaces, counter and fixtures coordinate for a clean & bright bathroom.
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/large-format-12x24-tile-place-vertically-for-visual-height-west-designs-full-service-k-b-designer-builder-img~fc7191de0e8519a3_8-6175-1-03fa865.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/22512fb200601854_8-5662/bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/custom-vanity-simple-clean-lines-creates-a-calm-retreat-west-designs-full-service-k-b-designer-builder-img~8fb147920e8519b6_8-6173-1-9f0cfef.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/98318a9300601874_8-5663/bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/flat-side-and-bottom-sink-maximizes-a-small-sink-and-faucet-west-designs-full-service-k-b-designer-builder-img~2f11e3760e85199e_8-6173-1-cd8b93e.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/fancy-tile-creates-a-carpet-for-vanity-area-west-designs-full-service-k-b-designer-builder-img~18c16c420e8519ad_8-6173-1-83760a5.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="720"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Tile Planning</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/bathrooms/tile-planning-stage-for-decorative-tile-inset-west-designs-full-service-k-b-designer-builder-img~3231ecb90eab7621_8-5350-1-37f006a.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/bathrooms/during-pic-tile-prep-for-shower-walls-and-floor-west-designs-full-service-k-b-designer-builder-img~b6f1b09d0eab7633_8-5350-1-78310d3.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/542199660060186f_8-5663/bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/86c1b53f00601869_8-5662/bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/0631909500601860_8-5662/bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/bathrooms/before-picture-initial-design-consultation-photo-west-designs-full-service-k-b-designer-builder-img~b331da2a0eab764f_8-5350-1-c468af4.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
