--- a/src/content/project/dog shower laundry combo.mdx
+++ b/src/content/project/dog shower laundry combo.mdx
@@ -1,8 +1,51 @@
 ---
 title: "Dog Shower/Laundry Combo"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
 publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/pictures/laundry-rooms/multi-purpose-dog-shower-and-laundry-room-combo-west-designs-full-service-k-b-designer-builder-img~4071edaa0eee8df4_8-6190-1-9f3e0a9.jpg",
+    alt: "Image of Dog Shower and Laundry Combo",
+  }
 ---
 
-## Dog Shower/Laundry Combo
+## DOG SHOWER & LAUNDRY ROOM COMBO!
+
+Project Year: 2020
+
+Project Cost: $10,001 - $25,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/laundry-rooms/multi-purpose-dog-shower-and-laundry-room-combo-west-designs-full-service-k-b-designer-builder-img~4071edaa0eee8df4_8-6190-1-9f3e0a9.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/laundry-rooms/multi-function-laundry-w-metal-closet-rod-to-hang-wet-or-dry-items-west-designs-full-service-k-b-designer-builder-img~fc2177ae0eee8dfb_8-7980-1-adc14c6.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/laundry-rooms/custom-shower-doors-to-fit-the-small-pet-shower-west-designs-full-service-k-b-designer-builder-img~7fc18e1c0eee8e02_8-6190-1-00547db.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+</div>
