--- a/src/content/project/edwards kitchen navy nautical.mdx
+++ b/src/content/project/edwards kitchen navy nautical.mdx
@@ -1,8 +1,160 @@
 ---
 title: "Edwards Kitchen - Navy nautical"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: ""
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/pictures/kitchens/white-tailored-subway-tile-peninsula-seating-white-quartz-counters-stunning-west-designs-full-service-k-b-designer-builder-img~8771eba20e851d84_8-6174-1-93086ec.jpg",
+    alt: "bathroom image",
+  }
 ---
 
-## Edwards Kitchen - Navy nautical
+## EDWARDS KITCHEN - Navy Nautical
+
+A tiny 50's bungalow is revamped with a top shelf collection of appliances and fixtures in this Sacramento remodel. Our client Mr. Edwards was ready for a bold change with colorful navy painted cabinets and a kitchen ready to perform efficiently with KitchenAid appliances. We removed one nook window to accommodate tall pantry cabs, wine refer and "X" wine storage and KitchenAid French door refer. The well organized kitchen layout provides excellent storage, multiple work areas and a place for kids to sit outside of the work triangle - all attained without removing any walls. Check out the Before pics!
+
+Project Cost: $50,001 - $75,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/white-tailored-subway-tile-peninsula-seating-white-quartz-counters-stunning-west-designs-full-service-k-b-designer-builder-img~8771eba20e851d84_8-6174-1-93086ec.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/stainless-farm-sink-kitchenaid-dishwasher-w-glass-front-west-designs-full-service-k-b-designer-builder-img~f951ef870e851d98_8-6174-1-12e88b1.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/wine-refrigerator-counter-depth-refrigerator-and-cabinet-recycle-bin-west-designs-full-service-k-b-designer-builder-img~191188750e851d8e_8-6174-1-329e862.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/bright-polished-textures-w-satin-finish-on-painted-cabinets-stunning-west-designs-full-service-k-b-designer-builder-img~0a51023d0eb74322_8-5113-1-76ef2c6.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/glass-doors-w-painted-interior-cabinets-west-designs-full-service-k-b-designer-builder-img~68817f9f0eb74331_8-5113-1-100ca05.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/peninsula-seating-created-within-the-galley-kitchen-west-designs-full-service-k-b-designer-builder-img~735152f20eb7433b_8-5113-1-bed5565.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/tall-pantry-cab-wine-storage-x-box-and-elevated-wine-refrigerator-west-designs-full-service-k-b-designer-builder-img~3c51fce90eb74348_8-5113-1-f486694.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/nautical-blue-and-white-w-full-height-dimensional-subway-tile-west-designs-full-service-k-b-designer-builder-img~26c133cc0eb74352_8-5114-1-428f877.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/premium-kitchenaid-appliances-farm-sink-and-elevated-wine-frig-west-designs-full-service-k-b-designer-builder-img~29d1fbf50eb7435f_8-5113-1-5479123.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/kitchenaid-hood-and-5-burner-glass-induction-cooktop-west-designs-full-service-k-b-designer-builder-img~86a162430eb7436b_8-5114-1-e38aa79.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/kitchens/before-pic-the-window-behind-the-owner-s-left-shoulder-was-removed-west-designs-full-service-k-b-designer-builder-img~091148ba0ebed4cc_8-5044-1-c1319d0.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/9cb17beb0ebed4c6_8-0362/beach-style.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
