--- a/src/content/project/kraus project designed for a quick home sale.mdx
+++ b/src/content/project/kraus project designed for a quick home sale.mdx
@@ -1,8 +1,131 @@
 ---
 title: "Kraus project designed for a Quick Home sale"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: ""
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/pictures/kitchens/a-new-chocolate-finish-on-oak-cabinets-transforms-w-stunning-results-west-designs-full-service-k-b-designer-builder-img~3fd14e070e85189b_8-6173-1-b44b258.jpg",
+    alt: "Image of kitchen cabinets",
+  }
 ---
 
-## Kraus project designed for a Quick Home sale
+## KRAUS PROJECT-Designed for a Quick Home Sale
+
+Every inch of oak cabinetry within this home was painted in a rich chocolate stain, saving the client thousands vs. the cost for new cabinetry! The oak handrails & spindles, vanities, hall linen cabinet doors were all enhanced by paint, showcasing the beautiful oak grain. New appliances, split face quartz back-splash and counters, including new flooring for entry, hall and kitchen, took this home to the next level for a maximum return on investment.
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/new-stainless-appliances-quartz-counters-and-laminate-floors-west-designs-full-service-k-b-designer-builder-img~bc81b4f40e85188d_8-6173-1-3fb91e0.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/painted-existing-cabinets-new-appliances-and-counters-and-split-face-qtz-splash-west-designs-full-service-k-b-designer-builder-img~6ab117f20e851892_8-6173-1-be3cb1a.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/beautiful-textured-natural-quartz-split-faced-stone-it-actually-sparkles-west-designs-full-service-k-b-designer-builder-img~efc1db920e851896_8-6173-1-d74b527.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/a-new-chocolate-finish-on-oak-cabinets-transforms-w-stunning-results-west-designs-full-service-k-b-designer-builder-img~3fd14e070e85189b_8-6173-1-b44b258.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Kitchen Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/pictures/kitchens/kitchen-before-oak-cabinets-make-for-beautiful-painted-cabinets-west-designs-full-service-k-b-designer-builder-img~147147170e855772_8-3937-1-c531837.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/entryways/painted-handrails-and-balusters-out-with-the-oak-west-designs-full-service-k-b-designer-builder-img~2761505a0e85574b_8-1996-1-e723ac3.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/dining-rooms/simple-dining-table-in-wood-coordinates-w-the-new-flooring-west-designs-full-service-k-b-designer-builder-img~fd4136840e851899_8-2031-1-92a19e4.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/family-rooms/simple-kitchen-upgrade-creates-a-blended-open-concept-west-designs-full-service-k-b-designer-builder-img~0b612c4a0e85189a_8-2023-1-a9ad982.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/entryways/transformed-entry-newly-painted-handrails-match-the-kitchen-cabinets-west-designs-full-service-k-b-designer-builder-img~7cd10e480e85572b_8-1542-1-951f846.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/entryways/stairwell-handrails-before-painting-west-designs-full-service-k-b-designer-builder-img~9d318e610e855792_8-1996-1-6216bfa.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+</div>
