--- a/src/content/project/part 1 whole home update.mdx
+++ b/src/content/project/part 1 whole home update.mdx
@@ -1,8 +1,228 @@
 ---
 title: "Part 1 Whole Home Update"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2022"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/ffc11f8002e4a8f0_8-2698/transitional-kitchen.jpg",
+    alt: "Image of Remodeled Kitchen",
+  }
 ---
 
-## Part 1 Whole Home Update
+## PART 1 - WHOLE HOME UPDATE - KITCHEN, FIREPLACE, BATHROOMS, DOORS & MORE!
+
+This project was a wonderful whole home remodel with a refreshing finish. The compartmentalized rooms were dark, dated, cramped & weren't conducive to the watchful care of our client's two charming daughters. Now the space is bright, open & superbly functional & offers several separate areas for homework, island dining, meal preparation, seated dining area, family and a warm new fireplace now enjoyed in the new open areas.
+The new floor plan, kitchen design, neutral color palette and finishes will remain in style & appreciated for decades!
+
+Project Year: 2022
+
+Project Cost: $150,001 - $200,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/ffc11f8002e4a8f0_8-2698/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/8011996e02e4a8f7_8-2745/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/3ee1fdae02e4a8fd_8-2746/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/02310fd802e4a902_8-2733/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/b4f1d59602e4a90a_8-2651/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/7381d8ac02e4a90f_8-2758/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/c6b172e702e4a915_8-2700/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/82c17cf102e4a91c_8-2727/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/f9f17fb702e4a924_8-2759/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/3c21c16702e4a92a_8-2740/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/4671313702e4a931_8-2696/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/ad0118ad02e4a939_8-2651/transitional-kitchen.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/25115ca602e4a94c_8-2745/transitional-kitchen.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/7e61b54002e4a951_8-2745/transitional-kitchen.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <img
+    src="https://st.hzcdn.com/simgs/a7e1b19c02e4a941_8-2743/transitional-family-room.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="580"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/64f1857802e4a946_8-2651/transitional-family-room.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/c421c30d02e4a957_8-2746/transitional-living-room.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
