--- a/src/content/project/part 2 home reno bold bathroom.mdx
+++ b/src/content/project/part 2 home reno bold bathroom.mdx
@@ -1,8 +1,97 @@
 ---
 title: "Part 2 Home Reno - Bold Bathroom"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2022"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/0281629502e4be3a_8-2661/contemporary-bathroom.jpg",
+    alt: "bathroom counter image",
+  }
 ---
 
-## Part 2 Home Reno - Bold Bathroom
+## PART 2 HOME RENO - Bold Bathroom for 2 Daughters
+
+Bold Patterns for Modern Feel - Add Accessories for Splash of Color, Neutral Black & White Works for Any Accent Color Selection
+
+Project Year: 2022
+
+Project Cost: $150,001 - $200,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/a551d9e602e4be13_8-2661/contemporary.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/6ea1983302e4be1a_8-2661/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/c5811a1202e4be20_8-8178/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/0281629502e4be3a_8-2661/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/0f6171f802e4be43_8-2661/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="656"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/bf016d8102e4be4b_8-2650/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/03b1fb2002e4be52_8-2698/contemporary-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+</div>
