--- a/src/content/project/rice en suite master bathroom.mdx
+++ b/src/content/project/rice en suite master bathroom.mdx
@@ -1,8 +1,99 @@
 ---
 title: "Rice En-suite Master Bathroom"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2018"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/pictures/bathrooms/rice-en-suite-master-bath-west-designs-full-service-k-b-designer-builder-img~77411fdb0e97eea4_8-5728-1-29bca7d.jpg",
+    alt: "bathroom image",
+  }
 ---
 
-## Rice En-suite Master Bathroom
+## RICE EN-SUITE MASTER BATHROOM CONVERSION
+
+Complete bedroom to bath conversion creating a beautiful spa like en-suite. Double French doors open to a beautiful sunny patio in this Sacramento Landpark home.
+
+Project Year: 2018
+
+Project Cost: $50,001 - $75,000
+
+Country: United States
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/rice-en-suite-master-bath-west-designs-full-service-k-b-designer-builder-img~77411fdb0e97eea4_8-5728-1-29bca7d.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/rice-en-suite-master-bath-west-designs-full-service-k-b-designer-builder-img~f68160e30e97eeb5_8-5728-1-a524ea4.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/rice-en-suite-master-bath-west-designs-full-service-k-b-designer-builder-img~d55176c50e97eecb_8-5729-1-ef060e5.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/a-very-pleased-client-west-designs-full-service-k-b-designer-builder-img~4451683d0e97eee1_8-5729-1-2d021e0.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/arabesque-tile-and-oil-rubbed-bronze-fixtures-west-designs-full-service-k-b-designer-builder-img~ef012b360e97eef2_8-5729-1-43c50c4.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/bathrooms/rice-en-suite-master-bath-x-box-towel-storage-west-designs-full-service-k-b-designer-builder-img~88b1b6f30e97ef14_8-5729-1-842f25a.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/laundry-rooms/laundry-room-project-add-on-w-new-bosch-stackable-w-d-west-designs-full-service-k-b-designer-builder-img~2f018f560e97ef02_8-8934-1-1dac516.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+</div>
