--- a/src/content/project/sacramento 1st floor reno 2 baths.mdx
+++ b/src/content/project/sacramento 1st floor reno 2 baths.mdx
@@ -1,8 +1,374 @@
 ---
 title: "Sacramento 1st floor Reno - 2 baths"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2021"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/c901844400d2bfb2_8-0674/transitional-bathroom.jpg",
+    alt: "Image of Master Bathroom",
+  }
 ---
 
-## Sacramento 1st floor Reno - 2 baths
+## SACRAMENTO 1ST FLOOR RENO - 2 BATHS & LAUNDRY RECONFIGURE
+
+This project dramatically reconfigured walls in the bathrooms, hall and laundry rooms. Odd angles & strange shapes were maddening to our Clients - they disliked the space so much they began removing the sheetrock to reveal new layout options! Together we found a plan that functioned beautifully for our Clients and met all requirements, including their 2 beautiful Basenji pups! Only two tones were used throughout for a peaceful modern vibe - beautiful quartzite counters and rich wood graining set the 2 tone palette.
+
+Project Year: 2021
+
+Project Cost: $75,001 - $100,000
+
+Country: United States
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/b7a1bbe800d2bf87_8-1811/transitional-laundry-room.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/2351cb8f00d2bf95_8-1811/transitional-laundry-room.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/aad1ab1700d2bf9a_8-1811/transitional-laundry-room.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/9221cda600d2bf9f_8-1811/transitional-laundry-room.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/08918d1c00d2bfa7_8-1811/transitional-laundry-room.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/c2d1cd6900d2bf8c_8-0674/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/b6c1cade00d2bf90_8-0676/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/7831a8b000d2bfac_8-0675/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/c901844400d2bfb2_8-0674/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/f441534600d2bfb7_8-0674/transitional-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="376"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before (Laundry Room)</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/3f81176300d2d462_8-5584/transitional-laundry-room.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Concept Rendering</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/7d31800c00d4c4de_8-5089/basement.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="284"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Final Layout</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/a80146dd00d4c4dc_8-5089/basement.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="312"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">New Dog Grooming Station</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/b16156c700d4c4d5_8-5089/hall.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+    <img
+      src="https://st.hzcdn.com/simgs/99f1244200d4c47d_8-0520/bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+    <img
+      src="https://st.hzcdn.com/simgs/b2c12eb100d4c482_8-0521/bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+    <img
+      src="https://st.hzcdn.com/simgs/ec01d19900d4c488_8-0520/bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+    <img
+      src="https://st.hzcdn.com/simgs/5021fb0500d4c4af_8-0520/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+    <img
+      src="https://st.hzcdn.com/simgs/cad19d1000d4c4bd_8-0521/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+    <img
+      src="https://st.hzcdn.com/simgs/729174fe00d4c4c8_8-0520/contemporary-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="736"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/3031f3ce00d4c4da_8-5089/hall.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="378"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/1b91bbcc00d2d46f_8-0677/transitional-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="358"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/69a104c400d2d473_8-0676/transitional-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="668"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/5c113c7a00d2d474_8-0677/transitional-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">Demo</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/5bd1dfc100d2d458_8-0676/transitional-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/67d19dff00d2d467_8-0676/transitional-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2 text-center">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/6b6135fc00d2d46c_8-0676/transitional-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
