--- a/src/content/project/traditional cherry cabinets for kitchen.mdx
+++ b/src/content/project/traditional cherry cabinets for kitchen.mdx
@@ -1,8 +1,129 @@
 ---
 title: "Traditional cherry cabinets for kitchen"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: ""
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/pictures/kitchens/traditional-cherry-cabinets-by-schuler-custom-copper-hood-west-designs-full-service-k-b-designer-builder-img~d7f10c620f00eec9_8-6572-1-7724209.jpg",
+    alt: "bathroom image",
+  }
 ---
 
-## Traditional cherry cabinets for kitchen
+## TRADITIONAL CHERRY CABINETS FOR KITCHEN & STAIRWELL UPDATE
+
+Complete kitchen, family room, entry, laundry many other areas of this spacious home were designed with a nod to traditional styling using warm tones and raised panel cherry cabinets. The cabinets were used throughout the home including a custom TV entertainment center, all vanities & a large study desk.
+Lots of textures and warm finishes for this traditional style create a space that looks bigger and more to scale with the tall ceilings.
+
+Project Cost: $150,001 - $200,000
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/traditional-cherry-cabinets-by-schuler-custom-copper-hood-west-designs-full-service-k-b-designer-builder-img~d7f10c620f00eec9_8-6572-1-7724209.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/rotated-and-reconfigured-island-corner-pantry-removed-west-designs-full-service-k-b-designer-builder-img~c641161e0f00eecf_8-6572-1-38c3e5c.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/varying-height-cabinets-lend-interest-to-a-large-kitchen-west-designs-full-service-k-b-designer-builder-img~42b109c30f00eed5_8-6572-1-5355171.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/cabinet-bump-out-spice-and-tray-pull-outs-and-custom-copper-hood-west-designs-full-service-k-b-designer-builder-img~6121e4be0f00eedc_8-6572-1-941508a.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/kitchens/kitchen-island-rotated-to-face-the-family-room-reduced-to-one-level-and-enlarged-west-designs-full-service-k-b-designer-builder-img~42610b6d0f7289ea_8-8446-1-1672ec4.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/pools/spectacular-resort-style-backyard-west-designs-full-service-k-b-designer-builder-img~162103b70f7289e4_8-2328-1-6ab0911.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/patios/peaceful-pool-with-putting-green-view-from-the-kitchen-and-family-rooms-west-designs-full-service-k-b-designer-builder-img~61b13c310f7289dc_8-8252-1-6cab557.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/family-rooms/split-face-travertine-coordinates-in-kitchen-and-fireplace-west-designs-full-service-k-b-designer-builder-img~523157480f00eee6_8-9816-1-3c62fe9.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/family-rooms/study-area-for-teen-pendant-lights-over-desk-paint-and-crown-west-designs-full-service-k-b-designer-builder-img~9051bf3d0f7289f1_8-8252-1-b1959a0.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/pictures/entryways/open-concept-showcases-the-updated-stairwell-entry-and-kitchen-west-designs-full-service-k-b-designer-builder-img~121193490f00eee1_8-4332-1-35b0c48.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="334"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+</div>
