--- a/src/content/project/unique bungalow tub shower conversion.mdx
+++ b/src/content/project/unique bungalow tub shower conversion.mdx
@@ -1,8 +1,223 @@
 ---
 title: "Unique Bungalow Tub/Shower Conversion"
-description: "This was a wonderful transformation for our Davis California client. The biggest designer/client decisions were whether or not to completely remove the tub from the master bath. After many design options were considered, our client chose to remove the tub, since another bathroom had one, and expand the vanity area and enlarge the shower. The overall spa feel was accomplished using only 3 colors."
-publishDate: "2020"
-image: { src: "/unsplash/b.jpg", alt: "bathroom image" }
+publishDate: "2022"
+image:
+  {
+    src: "https://st.hzcdn.com/simgs/e5f1a4550227e07f_8-4261/modern-bathroom.jpg",
+    alt: "bathroom image",
+  }
 ---
 
-## Unique Bungalow Tub/Shower Conversion
+## UNIQUE BUNGALOW TUB/SHOWER CONVERSION - SACRAMENTO CA
+
+This is one of my favorite projects! This tiny hall bath becomes a show stopping jewel box with a bold large format tile in a soft palette. Truly a delightful transformation from start to finish, with clients open to colorful, big, bold & beautiful & unafraid of a design risk. You'll see the giant patterned tile placed from shower wall to floor. A tall glass shower enclosure lets your eyes capture the entire space & a ceiling painted in a soft shade of sky blue tricks the mind into thinking the room is larger as well. The materials are bold & oversized, they are unified in scale and color & balanced to work perfectly with custom cabinets matching the rich colors of the hardwood floors throughout the rest of the home.
+
+Project Year: 2022
+
+Project Cost: $25,001 - $50,000
+
+Country: United States
+
+Zip Code: 95815
+
+<div class="flex flex-wrap w-full justify-center">
+  <img
+    src="https://st.hzcdn.com/simgs/01c15f590227e07b_8-4261/modern-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="686"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/e5f1a4550227e07f_8-4261/modern-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="666"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/47f10a1c0227e0d5_8-4262/modern-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="668"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/38e121920227e081_8-4261/modern-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="604"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <img
+    src="https://st.hzcdn.com/simgs/f651e2d90227e085_8-4261/modern-bathroom.jpg"
+    alt=""
+    border="0"
+    width="500"
+    height="668"
+    nopin="nopin"
+    ondragstart="return false;"
+    onselectstart="return false;"
+    oncontextmenu="return false;"
+  />
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/56317e290227e08e_8-4261/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/d951161e0227e099_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Before</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/df61395f0227e0aa_8-4261/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Materials</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/b581b0b20227e0a1_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="508"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Demo</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/1fa14f080227e0af_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="376"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Demo</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/b421e7b10227e0b3_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">Demo</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/03218f200227e0d1_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/c401b91d0227e0bd_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+  <div class="relative h-fit">
+    <div class="bg-black/70 absolute top-8 left-1/2 z-10 -translate-x-1/2">
+      <p class="text-2xl text-white h-fit m-0 p-1">During</p>
+    </div>
+    <img
+      src="https://st.hzcdn.com/simgs/6911b2440227e0cd_8-4262/modern-bathroom.jpg"
+      alt=""
+      border="0"
+      width="500"
+      height="666"
+      nopin="nopin"
+      ondragstart="return false;"
+      onselectstart="return false;"
+      oncontextmenu="return false;"
+    />
+  </div>
+</div>
